# gpu_uniqfinder

./: CMakeLists.txt  README.md  define.h  main.cpp
GPU/: GPUWrapper.cpp  GPUWrapper.h  uniqfind.cl
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  GPUWrapper.cpp  GPUWrapper.h  MemoryManager.cpp  MemoryManager.h  Worker.cpp  Worker.h  define.h  uniqfind.cl
src/test/: CMakeLists.txt  gpu_tests.cpp
