project(gpu_uniqfinder)
cmake_minimum_required(VERSION 3.10)
add_compile_definitions(_DEVICE_TYPE_=CL_DEVICE_TYPE_CPU)

set(CMAKE_CXX_STANDARD 17)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(${PROJECT_NAME} 
	"main.cpp"
    "GPU/GPUWrapper.cpp"
)

target_link_libraries(${PROJECT_NAME} OpenCL)


file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/GPU/uniqfind.cl
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
